--- a/strategygames/README
+++ b/strategygames/README
@@ -1,1 +1,2 @@
-
+All package files are in this folder! Pull entire file and same into folder called 'strategygames' on your computer. 
+Set working directory to 'strategygames' in RStudio.
