--- a/groupwork/Games-vignette.Rmd
+++ b/groupwork/Games-vignette.Rmd
@@ -9,10 +9,10 @@ vignette: >
 ---
 The strategygames packages introduces 4 simple strategy games to users of R:
 
-* Chinese Poker
-* Boggle
-* Tic Tac Toe
-* Black Jack 
++ Chinese Poker
++ Boggle
++ Tic Tac Toe
++ Black Jack 
 
 This document introduces you to strategygame's basic functions and how to use them in the games.
 
@@ -20,9 +20,139 @@ This document introduces you to strategygame's basic functions and how to use th
 
 chinese.poker() allows the user to begin playing a game of Chinese Poker with two computer opponents in the console. Once this function is run and the game begins, the user will be dealt a hand of 18 cards. By default, the user makes the first move.
 
+**Rules of the Game**
+
++ First player to get rid of his/her cards wins. 
++ You can play a card if it is **better** than your previous opponent's.
++ **Enter single cards in console normally, without quotations.** 
++ **Enter special hands in console separated by commas but no space: 5,5 or J,J**
+
+**Ranking of Cards**
+
++ All suits are worth the same value.
++ All single card values are displayed when user plays the game.
++ The ranking of single cards: 2-10, J, Q, K, A, Little Joker, Big Joker.
++ The ranking of special hands: single, pair, triple, bomb (four of a kind).
+
+**For instance**: If your opponent plays a single 5, you can play any single card greater than 5 in ranking, **OR** or can play a special hand greater than a single in ranking - e.g. a pair of 3's.
+
 These 18 cards will be automatically sorted for the user for ease of viewing. At each turn, the user will be prompted as to whether or not he/she would like to check his/her current hand. 
 
-Note the limitations of this game. For simplicity: 
+**Example Game** 
+Let's say you are dealt this hand. 
+```
+$`1`
+# A tibble: 5 x 3
+# Groups:   rank [5]
+       rank value  freq
+      <chr> <chr> <int>
+1         2     2     1
+2         7     7     1
+3         9     9     1
+4 Big Joker    30     1
+5         K    13     1
+
+$`2`
+# A tibble: 5 x 3
+# Groups:   rank [5]
+   rank value  freq
+  <chr> <chr> <int>
+1    10    10     2
+2     3     3     2
+3     5     5     2
+4     8     8     2
+5     Q    12     2
+
+$`3`
+# A tibble: 1 x 3
+# Groups:   rank [1]
+   rank value  freq
+  <chr> <chr> <int>
+1     4     4     3
+```
+
+You'll want to get rid of your smallest cards first. Say you play a single 2. 
+
+```
+[1] 7
+[1] "new round"
+[1] 9
+```
+
+Opponent 1 plays a 7 and Opponent 2 plays a 9 - both single cards greater than 2. You're prompted to answer whether or not you'd like to check your current hand. 
+
+```
+$`1`
+# A tibble: 4 x 3
+# Groups:   rank [4]
+       rank value  freq
+      <chr> <chr> <int>
+1         7     7     1
+2         9     9     1
+3 Big Joker    30     1
+4         K    13     1
+
+$`2`
+# A tibble: 5 x 3
+# Groups:   rank [5]
+   rank value  freq
+  <chr> <chr> <int>
+1    10    10     2
+2     3     3     2
+3     5     5     2
+4     8     8     2
+5     Q    12     2
+
+$`3`
+# A tibble: 1 x 3
+# Groups:   rank [1]
+   rank value  freq
+  <chr> <chr> <int>
+1     4     4     3
+```
+
+Notice that the single 2 card is disposed of after being played. Say now you'd like to play a pair of 5's. 
+
+```
+[1] 13 13
+[1] "new round"
+[1] 14 14
+```
+
+Your opponents return a pair of K's and a pair of A's. The pair of 5's will be disposed of from your current hand. 
+
+```
+$`1`
+# A tibble: 4 x 3
+# Groups:   rank [4]
+       rank value  freq
+      <chr> <chr> <int>
+1         7     7     1
+2         9     9     1
+3 Big Joker    30     1
+4         K    13     1
+
+$`2`
+# A tibble: 4 x 3
+# Groups:   rank [4]
+   rank value  freq
+  <chr> <chr> <int>
+1    10    10     2
+2     3     3     2
+3     8     8     2
+4     Q    12     2
+
+$`3`
+# A tibble: 1 x 3
+# Groups:   rank [1]
+   rank value  freq
+  <chr> <chr> <int>
+1     4     4     3
+```
+Keep playing until you get rid of all your cards!
+
+**Note the limitations of this game.** 
+For simplicity: 
 1. Traditionally, can be played with 3-5 people. Here, we are only allowing for three. 
 2. The hands fullhouse and straight flush are not included in this computer game.
 
